@startuml
!theme plain
skinparam backgroundColor white

class User {
  +id: string
  +email: string
}

class Task {
  +id: string
  +title: string
  +completed: boolean
  +priority: Priority
  +user_id: string
}

class Project {
  +id: string
  +name: string
  +color: string
  +user_id: string
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

User ||--o{ Task : owns
User ||--o{ Project : creates
Project ||--o{ Task : contains
Task }o-- Priority : has

@enduml